Fixing some typos and wording in ru.json

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -301,7 +301,7 @@
                 "CYBER_COSMETICS": "Косметические импланты",
                 "CYBER_EARWARE": "Ушные импланты",
                 "CYBER_EYEWARE": "Глазные импланты",
-                "CYBER_HEADWARE": "Церебральные имплатны",
+                "CYBER_HEADWARE": "Церебральные импланты",
                 "CYBER_IMPLANT_WEAPON": "Киберимплатное оружие",
                 "CYBER_LIMB_ACCESSORY": "Аксессуары для киберконечностей",
                 "CYBER_LIMB_ENHANCEMENT": "Усилители киберконечностей",
@@ -685,7 +685,7 @@
             },
             "disarm_data_bomb": {
                 "name": "Обезвредить инфобомбу",
-                "hint": "Позволяет обезвредить инфобому, обнаруженную при помощи Внимания в Матрице. Если не набрано нужное количество чистых успехов, бомба взрывается."
+                "hint": "Позволяет обезвредить инфобомбу, обнаруженную при помощи Внимания в Матрице. Если не набрано нужное количество чистых успехов, бомба взрывается."
             },
             "device_lock": {
                 "name": "Блокировка устройства",
@@ -1060,7 +1060,7 @@
                 "drain": "Выдержать истощение",
                 "soak": "Выдержать урон"
             },
-            "cantDodgeBullets": "Увеличте порог в зависимости от обстоятельств после установки дистанции",
+            "cantDodgeBullets": "Увеличьте порог в зависимости от обстоятельств после установки дистанции",
             "configure": "Настройте бросок",
             "wound-modifier": "Использовать модификатор ранения",
             "sustained-spell-modifier": "Использовать модификатор длительного заклинания",
@@ -1675,7 +1675,7 @@
                 "statblock_import": {
                     "error": "Что-то пошло нге так при импортировании блока характеристик НИП. Попробуйте другую читалоку PDF, однако есть возможность, что ваш PDF файл не поддерживается.",
                     "success": "Блок характеристик «{actor}» скопирован ",
-                    "actor_tab": "во вкладку актёроов.",
+                    "actor_tab": "во вкладку актёров.",
                     "npc_compendium": "в библиотеку НИП."
                 }
             }
@@ -1782,7 +1782,7 @@
             "legwork_rolltext": "Подготовка // Связь",
             "loyalty_rolltext": "Подготовка  // Лояльность",
             "legwork_description": "Как много {name} знает или может разузнать через свою связи?",
-            "loyalty_description": "Сколько {name} готов(а) вам рассказать из того, что знает или может разузнать?",
+            "loyalty_description": "Как много {name} желает вам рассказать из того, что знает или может разузнать?",
             "payformore": "«Знаешь, лишние деньги никогда не помешают. За определённую сумму я могу рассказать больше…»",
             "results": {
                 "0": "Ничего полезного.",
@@ -1801,7 +1801,7 @@
         "ammotypes": {
             "regular": "Обычные",
             "apds": "ПБОП",
-            "explosive": "Взрывныее",
+            "explosive": "Взрывные",
             "flechette": "Стреловидные",
             "gel": "Гелевые",
             "sticknshock": "Электрошоковые"
