Fix missing localisation in Attack dialogue (#119)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1079,7 +1079,8 @@
         "opponent": "Opponent",
         "opponent_edge_boost": "Opponent Edge Boost",
         "spend": "Spend!",
-        "original_test": "Original test by:"
+        "original_test": "Original test by:",
+        "boost": "Boost"
       },
       "edge_perform": "Do it",
       "edgegain": "Edge-Gain (max): ",
