Update ru.json up to c0435da

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1082,7 +1082,8 @@
                 "opponent": "Противник",
                 "opponent_edge_boost": "Бонус преимущества противника",
                 "spend": "Потратить!",
-                "original_test": "Проверку проходил(а):"
+                "original_test": "Проверку проходил(а):",
+                "boost": "Бонус преимущества"
             },
             "edge_perform": "Давай",
             "edgegain": "Получение преимущества (макс.): ",
