--- a/lang/en.json
+++ b/lang/en.json
@@ -1629,7 +1629,8 @@
       "attackRating":"Attack Rtg.",
       "firemodes": "Modes",
       "ammo": "Ammunition",
-      "ammo_loaded": "Ammo Loaded"
+      "ammo_loaded": "Ammo Loaded",
+      "reload_ammo": "Reload your ammunition"
     },
     "ui": {
       "notifications": {
