--- a/lang/fr.json
+++ b/lang/fr.json
@@ -416,7 +416,7 @@
         "TRACKED": "Véhicules à chenilles",
         "SPECIAL_VEHICLES": "Véhicules spéciaux",
         "UNARMED": "Mains nues",
-        "VANS": "Fourgons et camions cargo",
+        "VANS": "Fourgons et camions",
         "VEHICLE_ACCESSORY": "Modifications de véhicules",
         "VISION_ENHANCEMENT": "Améliorations visuelles",
         "VTOL": "ADAV et ADAC/V",
