--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1079,6 +1079,7 @@
                 "spending": "Трата преимущества",
                 "spend_edge": "Потратить преимущество",
                 "edge_spent": "Бонус преимущества: {boostTitle}",
+                "edge_action_spent": "Действие преимущества: {actionTitle}",
                 "opponent": "Противник",
                 "opponent_edge_boost": "Бонус преимущества противника",
                 "spend": "Потратить!",
@@ -1633,7 +1634,8 @@
             "attackRating": "Знач. атаки",
             "firemodes": "Режимы",
             "ammo": "Патроны",
-            "ammo_loaded": "Тип патронов"
+            "ammo_loaded": "Тип патронов",
+            "reload_ammo": "Перезарядить патроны"
         },
         "ui": {
             "notifications": {
@@ -1678,7 +1680,8 @@
                     "success": "Блок характеристик «{actor}» скопирован ",
                     "actor_tab": "во вкладку актёров.",
                     "npc_compendium": "в библиотеку НИП."
-                }
+                },
+                "not_enough_ammo": "В оружии недостаточно патронов. Измените режим ведения огня или перезарядите оружие."
             }
         },
         "EFFECT": {
