Feature: Active Effects for Actors and Items (#3)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1804,6 +1804,20 @@
       "flechette": "Flechette",
       "gel": "Gel",
       "sticknshock": "Stick-n-Shock"
+    },
+    "effect": {
+      "Label": "Effects",
+      "Duration": "Duration",
+      "Source": "Source",
+      "Toggle": "Toggle Effect",
+      "Temporary": "Temporary Effects",
+      "Passive": "Passive Effects",
+      "Inactive": "Inactive Effects",
+      "CantDelete": "You can only delete this effect from it's Item."
+    },
+    "ACTIVE_EFFECT_OPTIONS": {
+      "attributes.bod.mod": "Body Modifier",
+      "attributes.agi.mod": "Agility Modifier"
     }
   }
 }
