--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1562,10 +1562,10 @@
       "range_line_of_sight_area": "Ligne de vue (zone)",
       "range_line_of_sight_area_short": "LdV(Z)",
       "range_line_of_sight_short": "LdV",
-      "range_self": "Soi-même",
-      "range_self_area": "Soi-même (Zone)",
-      "range_self_area_short": "S(Z)",
-      "range_self_short": "Soi",
+      "range_self": "Personnelle",
+      "range_self_area": "Personnelle (Zone)",
+      "range_self_area_short": "P (Z)",
+      "range_self_short": "Pers.",
       "range_touch": "Contact",
       "range_touch_short": "C",
       "type": "Type",
