--- a/lang/fr.json
+++ b/lang/fr.json
@@ -153,7 +153,7 @@
       "activation": "Activation",
       "activation_major": "Majeure",
       "activation_minor": "Mineure",
-      "activation_passive": "Passive",
+      "activation_passive": "Passif",
       "cost": "Coût",
       "haslevel": "Avec niveau",
       "pp": "PP",
