Add actor ActiveEffect example list (#3)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1816,8 +1816,18 @@
       "CantDelete": "You can only delete this effect from it's Item."
     },
     "ACTIVE_EFFECT_OPTIONS": {
-      "attributes.bod.mod": "Body Modifier",
-      "attributes.agi.mod": "Agility Modifier"
+      "Modifier": "Modifier",
+      "defensepool.physical.mod": "Physical Defense Pool Modifier",
+      "defensepool.astral.mod": "Magic Defense Pool Modifier",
+      "defensepool.matrix.mod": "Matrix Defense Pool Modifier",
+      "defensepool.spells_direct.mod": "Direct Spells Defense Pool Modifier",
+      "defensepool.spells_indirect.mod": "Indirect Spells Defense Pool Modifier",
+      "defensepool.toxin.mod": "Toxin Defense Pool Modifier",
+      "defensepool.damage_physical.mod": "Physical Damage Defense Pool Modifier",
+      "defensepool.damage_astral.mod": "Astral Damage Defense Pool Modifier",
+      "initiative.physical.diceMod": "Physical Initiative Dice Pool Modifier",
+      "initiative.astral.diceMod": "Astral Initiative Dice Pool Modifier",
+      "initiative.matrix.diceMod": "Matrix Initiative Dice Pool Modifier"
     }
   }
 }
