Update actor ActiveEffect example list (#3)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1822,7 +1822,8 @@
       "defensepool.matrix.mod": "Matrix Defense Pool Modifier",
       "defensepool.spells_direct.mod": "Direct Spells Defense Pool Modifier",
       "defensepool.spells_indirect.mod": "Indirect Spells Defense Pool Modifier",
-      "defensepool.toxin.mod": "Toxin Defense Pool Modifier",
+      "defensepool.toxin.mod": "Toxin Resist Pool Modifier",
+      "defensepool.drain.mod": "Drain Resist Pool Modifier",
       "defensepool.damage_physical.mod": "Physical Damage Defense Pool Modifier",
       "defensepool.damage_astral.mod": "Astral Damage Defense Pool Modifier",
       "initiative.physical.diceMod": "Physical Initiative Dice Pool Modifier",
