Improvement: Your Attribute augmentation modifier is only applied up to +4 to your Attribute.

--- a/lang/en.json
+++ b/lang/en.json
@@ -98,7 +98,8 @@
     "str": "Strength",
     "str_short": "STR",
     "wil": "Willpower",
-    "wil_short": "WIL"
+    "wil_short": "WIL",
+    "max_augment": "Your augmentation modifier is higher than 4. A maximum of 4 is applied to your Attribute."
   },
   "skill": {
     "astral": "Astral",
