--- a/lang/en.json
+++ b/lang/en.json
@@ -1046,7 +1046,11 @@
       "ar_2": "Medium",
       "ar_3": "Far",
       "ar_4": "Extreme",
-      "attack": "Attack",
+      "close_hint": "Close (0-3 meters)",
+      "near_hint": "Near (4-50 meters)",
+      "medium_hint": "Medium (51-250 meters)",
+      "far_hint": "Far (251-500 meters)",
+      "extreme_hint": "Extreme (500+ meters)",
       "attackRating": "Attack Rating",
       "bf_type": "Type",
       "bf": {
@@ -1817,13 +1821,13 @@
       "CantDelete": "You can only delete this effect from it's Item."
     },
     "active_effect": {
-      "explanation": "Active Effects can modify attribute modifiers and pools of your character or item.",
+      "explanation": "Active Effects can modify attribute modifiers and pools of your character or item. Please open a Feature Request ticket if you miss an automation needed for a Shadowrun item.",
       "usage_tips": {
         "1": "In general, use a Modifier key to adjust an Attribute, Pool or Rating.",
         "2": "Only use a Pool key if you need to <em>Override</em> a complete attribute, like with Cyberlimbs or Skillwires.",
         "3": "As normal in Shadowrun 6E, Attribute Modifiers are automatically capped at +4."
       },
-      "item_tip": "If you want to adjust an Item statistic itself, like with a Weapon, you <strong>must</strong> disable the <em>Apply Effect to Actor</em> checkbox in the Details tab.",
+      "item_tip": "If you want to adjust an Item statistic itself, like with a Weapon, you <strong>must</strong> disable the <em>Apply Effect to Actor</em> checkbox in the Details tab. An Active Effect can only apply to <em>either</em> an Actor <em>or</em> an Item.",
       "more_info": "For more information, see the following link:",
       "advanced": "Advanced?",
       "advanced_hint": "If checked, you can enter custom System Attribute Keys instead of only the Shadowrun 6E system advised list.",
@@ -1840,7 +1844,8 @@
       "defensepool.damage_astral.mod": "Astral Damage Defense Pool Modifier",
       "initiative.physical.diceMod": "Physical Initiative Dice Pool Modifier",
       "initiative.astral.diceMod": "Astral Initiative Dice Pool Modifier",
-      "initiative.matrix.diceMod": "Matrix Initiative Dice Pool Modifier"
+      "initiative.matrix.diceMod": "Matrix Initiative Dice Pool Modifier",
+      "weapon.mod": "Weapon Mod:"
     }
   }
 }
