Feature: add range mouseover hints to AR fields (correct translation keys)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1046,11 +1046,11 @@
       "ar_2": "Medium",
       "ar_3": "Far",
       "ar_4": "Extreme",
-      "close_hint": "Close (0-3 meters)",
-      "near_hint": "Near (4-50 meters)",
-      "medium_hint": "Medium (51-250 meters)",
-      "far_hint": "Far (251-500 meters)",
-      "extreme_hint": "Extreme (500+ meters)",
+      "ar_0_hint": "Close (0-3 meters)",
+      "ar_1_hint": "Near (4-50 meters)",
+      "ar_2_hint": "Medium (51-250 meters)",
+      "ar_3_hint": "Far (251-500 meters)",
+      "ar_4_hint": "Extreme (500+ meters)",
       "attackRating": "Attack Rating",
       "bf_type": "Type",
       "bf": {
