--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1050,11 +1050,11 @@
 			"ar_3": "Дальняя",
 			"ar_4": "Экстремальная",
 			"attack": "Атака",
-			"close_hint": "Вплотную (0-3 метра)",
-			"near_hint": "Близкая (4-50 метров)",
-			"medium_hint": "Средняя (51-250 метров)",
-			"far_hint": "Дальняя (251-500 метров)",
-			"extreme_hint": "Экстремальная (500+ метров)",
+			"ar_0_hint": "Вплотную (0-3 метра)",
+			"ar_1_hint": "Близкая (4-50 метров)",
+			"ar_2_hint": "Средняя (51-250 метров)",
+			"ar_3_hint": "Дальняя (251-500 метров)",
+			"ar_4_hint": "Экстремальная (500+ метров)",
 			"attackRating": "Значение атаки",
 			"bf_type": "Тип",
 			"bf": {
