--- a/lang/ru.json
+++ b/lang/ru.json
@@ -474,10 +474,10 @@
 			"essence": "Сущность",
 			"feature": "Особенности",
 			"firemode": {
-				"BF": "Длинная очередь",
-				"FA": "Непрерывный огонь",
+				"SS": "Одиночный выстрел",
 				"SA": "Короткая очередь",
-				"SS": "Одиночный выстрел"
+				"BF": "Длинная очередь",
+				"FA": "Непрерывный огонь"
 			},
 			"mastyle": {
 				"category": {
@@ -505,7 +505,8 @@
 			"price": "Стоимость",
 			"skill": "Навык",
 			"skillspec": "Специализация",
-			"social": "Социальный",
+			"social": "Общение",
+			"social_rating": "Рейтинг общения",
 			"stun_damage": "О",
 			"subtype": "Подтип",
 			"type": "Тип",
@@ -843,10 +844,13 @@
 			"vrhot": "ВР (Горячий сим)"
 		},
 		"monitor": {
-			"label": "Состояние",
+			"label": "Счётчики",
 			"matrix": "Матрица",
+			"matrix_monitor": "Счётчик состояния Матрицы",
 			"physical": "Здоровье",
+			"physical_monitor": "Счётчик здоровья",
 			"stun": "Оглушение",
+			"stun_monitor": "Счёткик оглушения",
 			"overflow": "Критический",
 			"dead": "МЁРТВ",
 			"broken": "СЛОМАНО"
@@ -1605,7 +1609,6 @@
 			"guardian": "Дух-покровитель",
 			"guidance": "Дух-проводник",
 			"task": "Дух-помощник"
-			
 		},
 		"tradition": {
 			"attribute": "Характеристика традиции"
@@ -1826,21 +1829,35 @@
 			"Inactive": "Неактивные эффекты",
 			"CantDelete": "Данный эффект можно удалить только с предмета, откуда он происходит."
 		},
-		"ACTIVE_EFFECT_OPTIONS": {
-			"attributes.bod.mod": "Модификатор тела",
-			"attributes.agi.mod": "Модификатор проворства",
-			"Modifier": "Модификатор",
+		"active_effect": {
+			"explanation": "Активные эффекты могут изменять модификаторы характеристик и наборы кубиков персонажей и предметов. Если вам не достёт какого-то элемента автоматизации, откройте тикет с соответствующим запросом на GitHub.",
+			"usage_tips": {
+				"1": "В обычном режиме при помощи ключа модификатора можно изменить значение характеристики, размер набора кубиков или рейтинг.",
+				"2": "Используйте ключ набора кубиков только в случае, если значение характеристики нужно <em>полностью заменить</em>, как в случае с киберконечностями и прошивкой навыка.",
+				"3": "В соответствии с правилами шестой редакции Shadowrun, модификаторы характеристик автоматически ограничены до +4."
+			},
+			"item_tip": "Если вам нужно, чтобы модификатор изменял характеристику непосредственно предмета непосредственно, например у оружия, то вам <em>необходимо</em> снять галочку <em>«Передача эффекта актёру»</em> во вкладке «Подробности». Один эффект может применяться <em>только либо</em> к предмету, <em>либо</em> к актёру.",
+			"more_info": "Для подробной информации пройдите по следующей ссылке:",
+			"advanced": "Продвинутый режим?",
+			"advanced_hint": "Если поставлена галочка, то вы можете использовать системные ключи атрибутов вместо предложенного перечня для шестой редакции Shadowrun.",
+			"Modifier": "Модификатор: {attribute}",
+			"Skill": "Навык: {skill}",
+			"Pool": "Набор кубиков: {pool} (полная замена)",
 			"defensepool.physical.mod": "Модификатор набора кубиков физической защиты",
 			"defensepool.astral.mod": "Модификатор набора кубиков астральной защиты",
 			"defensepool.matrix.mod": "Модификатор набора кубиков защиты в матрице",
 			"defensepool.spells_direct.mod": "Модификатор набора кубиков защиты от заклинаний прямого действия",
 			"defensepool.spells_indirect.mod": "Модификатор набора кубиков защиты от заклинаний косвенного действия",
 			"defensepool.toxin.mod": "Модификатор набора кубиков сопротивления токсинам",
+			 "defensepool.drain.mod": "Модификатор набора кубиков сопротивления истощению",
 			"defensepool.damage_physical.mod": "Модификатор набора кубиков физической атаки",
 			"defensepool.damage_astral.mod": "Модификатор набора кубиков астральной атаки",
 			"initiative.physical.diceMod": "Модификатор набора кубиков физической инициативы",
 			"initiative.astral.diceMod": "Модификатор набора кубиков астральной инициативы",
-			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в матрице"
+			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в матрице",
+			"armor.mod": "Модификаторы брони:",
+			"weapon.mod": "Модификаторы оружия:",
+			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон"
 		}
 	}
 }
