Refactor folder and document import structure

--- a/lang/en.json
+++ b/lang/en.json
@@ -1857,5 +1857,15 @@
       "weapon.mod": "Weapon Mod:",
       "stunOrPhysical": "Stun (true) or Physical (false) damage"
     }
+  },
+  "SR6": {
+    "Actor": {
+      "base": {
+        "a": "b"
+      },
+      "Sprite": {
+        
+      }
+    }
   }
 }
