Update ru.json 4ad47fe

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -45,7 +45,8 @@
 			"NPC": "Пешка/Персонаж ведущего",
 			"Player": "Персонаж игрока",
 			"Spirit": "Дух",
-			"Vehicle": "Транспортное средство/дрон"
+			"Vehicle": "Транспортное средство/дрон",
+			"Sprite": "Спрайт"
 		},
 		"Item": {
 			"adeptpower": "Способность адепта",
@@ -586,6 +587,7 @@
 			"devRating": "Рейтинг устройства",
 			"dual_hand": "Двуручное",
 			"dice": "Кубики",
+			"edge_changes_combat": "Изменение очков преимущества в бою",
 			"edit": "Редактировать",
 			"expertise": "Мастерство",
 			"extended_test": "Продолжительная проверка",
@@ -1645,6 +1647,7 @@
 			"ammo": "Патроны",
 			"ammo_loaded": "Тип патронов",
 			"reload_ammo": "Перезарядить патроны"
+			"ammo_changes_combat": "Смена типа патронов в бою"
 		},
 		"ui": {
 			"notifications": {
@@ -1690,7 +1693,10 @@
 					"actor_tab": "во вкладку актёров.",
 					"npc_compendium": "в библиотеку НИП."
 				},
-				"not_enough_ammo": "В оружии недостаточно патронов. Измените режим ведения огня или перезарядите оружие."
+				"not_enough_ammo": "В оружии недостаточно патронов. Измените режим ведения огня или перезарядите оружие.",
+				"character_has_reloaded": "{character} перезарядил(а) {ammoType} патроны в свой {weaponName}.",
+				"character_has_switched_ammo": "{character} сменил(а) тип заряженных в {weaponName} патронов на {ammoType}."
+				"character_has_changed_edge": "{character} вручную изменил(а) количество очков преимущества с {oldEdge} на {edge}"
 			}
 		},
 		"EFFECT": {
@@ -1858,6 +1864,15 @@
 			"armor.mod": "Модификаторы брони:",
 			"weapon.mod": "Модификаторы оружия:",
 			"stunOrPhysical": "Оглушающий (истина) или Физический (ложь) урон"
+		}
+	},
+	"SR6": {
+		"Actor": {
+			"base": {
+				"a": "b"
+			},
+			"Sprite": {
+			}
 		}
 	}
 }
