--- a/lang/en.json
+++ b/lang/en.json
@@ -1691,7 +1691,8 @@
         "not_enough_ammo": "You don't have enough ammunition in your weapon. Change your firing mode, or reload your weapon first.",
         "character_has_reloaded": "{character} has reloaded their {weaponName} weapon with {ammoType} ammo.",
         "character_has_switched_ammo": "{character} has switched the ammo loaded in their {weaponName} weapon to {ammoType}.",
-        "character_has_changed_edge": "{character} has changed their Edge manually from {oldEdge} to {edge}"
+        "character_has_changed_edge": "{character} has changed their Edge manually from {oldEdge} to {edge}",
+        "matrix_check_os": "Your current Overwatch Score is {os}."
       }
     },
     "EFFECT": {
