--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1646,7 +1646,7 @@
 			"firemodes": "Режимы",
 			"ammo": "Патроны",
 			"ammo_loaded": "Тип патронов",
-			"reload_ammo": "Перезарядить патроны"
+			"reload_ammo": "Перезарядить патроны",
 			"ammo_changes_combat": "Смена типа патронов в бою"
 		},
 		"ui": {
@@ -1695,7 +1695,7 @@
 				},
 				"not_enough_ammo": "В оружии недостаточно патронов. Измените режим ведения огня или перезарядите оружие.",
 				"character_has_reloaded": "{character} перезарядил(а) {ammoType} патроны в свой {weaponName}.",
-				"character_has_switched_ammo": "{character} сменил(а) тип заряженных в {weaponName} патронов на {ammoType}."
+				"character_has_switched_ammo": "{character} сменил(а) тип заряженных в {weaponName} патронов на {ammoType}.",
 				"character_has_changed_edge": "{character} вручную изменил(а) количество очков преимущества с {oldEdge} на {edge}",
 				"matrix_check_os": "Ваш текущий показатель надзора: {os}."
 			}
