Canvas Tokens now have an indicator if they are in a group, and the indicator lights up on all Grunts if one of them is selected (#44)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1697,7 +1697,8 @@
         "select_control_group": "You have selected the Control Group {controlGroup} tokens.",
         "form_grunt_group": "You have formed a Grunt Group with the selected Tokens.",
         "dismantle_grunt_group": "You have dismantled the Grunt Group of the selected Tokens.",
-        "form_grunt_group_failed": "The selected tokens were not valid for a Grunt Group. They must not have \"Link Actor Data\" enabled in their Token Configuration."
+        "form_grunt_group_failed": "The selected tokens were not valid for a Grunt Group. They must not have \"Link Actor Data\" enabled in their Token Configuration.",
+        "grunt_group_takes_two": "You need more than one Token selected to form a Grunt Group."
       }
     },
     "EFFECT": {
